--- a/html/rest3.html
+++ b/html/rest3.html
@@ -83,68 +83,68 @@
                             <i class="restau__animation__icon fa-regular fa-circle-check"></i>
                         </div>
                     </div>
+                    <div class="restau__card restau__card__5">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Magret de canard</h3>
+                            <div class="restau__card__text">Et parmentier de pommes de terre</div>
+                        </div>
+                        <div class="restau__card__price">35€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
+                    </div>
+                    <div class="restau__card restau__card__6">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Pigeonneau d’Ille-et-Vilaine</h3>
+                            <div class="restau__card__text">Sur son lit de gnocchis aux légumes</div>
+                        </div>
+                        <div class="restau__card__price">44€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
+                    </div>
+
+            </section>
+            <section class="restau__section">
+                <div class="restau__section__header">
+                    <h2 class="restau__section__title">Desserts</h2>
+                    <div class="restau__section__underline"></div>
                 </div>
-                <div class="restau__card restau__card__5">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Magret de canard</h3>
-                        <div class="restau__card__text">Et parmentier de pommes de terre</div>
+                <div class="restau--row">
+                    <div class="restau__card restau__card__7">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Pétales de violettes glacés</h3>
+                            <div class="restau__card__text">Et purée de noisettes</div>
+                        </div>
+                        <div class="restau__card__price">18€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
-                    <div class="restau__card__price">35€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                    <div class="restau__card restau__card__8">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Fondant au chocolat</h3>
+                            <div class="restau__card__text">Revisité</div>
+                        </div>
+                        <div class="restau__card__price">22€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="restau__card restau__card__6">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Pigeonneau d’Ille-et-Vilaine</h3>
-                        <div class="restau__card__text">Sur son lit de gnocchis aux légumes</div>
-                    </div>
-                    <div class="restau__card__price">44€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-        </div>
-        </section>
-        <section class="restau__section">
-            <div class="restau__section__header">
-                <h2 class="restau__section__title">Desserts</h2>
-                <div class="restau__section__underline"></div>
-            </div>
-            <div class="restau--row">
-                <div class="restau__card restau__card__7">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Pétales de violettes glacés</h3>
-                        <div class="restau__card__text">Et purée de noisettes</div>
-                    </div>
-                    <div class="restau__card__price">18€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                    <div class="restau__card restau__card__9">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Millefeuille croustillant</h3>
+                            <div class="restau__card__text">Myrtilles et pâte d’amande</div>
+                        </div>
+                        <div class="restau__card__price">23€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
                 </div>
-                <div class="restau__card restau__card__8">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Fondant au chocolat</h3>
-                        <div class="restau__card__text">Revisité</div>
-                    </div>
-                    <div class="restau__card__price">22€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
-                    </div>
+                <div class="restau__button"><button class="restau__button__purple button__purple">Commander</button>
                 </div>
-                <div class="restau__card restau__card__9">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Millefeuille croustillant</h3>
-                        <div class="restau__card__text">Myrtilles et pâte d’amande</div>
-                    </div>
-                    <div class="restau__card__price">23€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="restau__button"><button class="restau__button__purple button__purple">Commander</button></div>
-        </section>
+            </section>
         </div>
     </main>
 
