(11.12.2022-12h42) Correction des liens entre les pages et style.css

--- a/src/html/rest1.html
+++ b/src/html/rest1.html
@@ -10,13 +10,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/src/Css/style.css">
+    <link rel="stylesheet" href="../Css/style.css">
     <title>Oh my food - La pallette du goût</title>
 </head>
 
 <body>
     <header class="restau__header">
-        <a href="/index.html"><i class="restau__header__icon fa-solid fa-arrow-left"></i></a>
+        <a href="../../index.html"><i class="restau__header__icon fa-solid fa-arrow-left"></i></a>
         <h1 class="restau__header__title">ohmyfood</h1>
     </header>
 
