--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap"
         rel="stylesheet">
     <!-- <link rel="stylesheet" href="Css/normalize.css"> -->
-    <link rel="stylesheet" href="/src/Css/style.css">
+    <link rel="stylesheet" href="src/Css/style.css">
     <title>Oh my food</title>
 </head>
 
@@ -62,8 +62,8 @@
             <h2 class="rest__title">Restaurants</h2>
             <div class="rest--flex">
                 <div class="rest__card">
-                    <a href="/src/html/rest1.html">
-                        <img class="rest__card__img" src="/src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                    <a href="src/html/rest1.html">
+                        <img class="rest__card__img" src="src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                             alt="photo plat">
                         <div></div>
                         <div class="rest__card__content">
@@ -78,8 +78,8 @@
                     </a>
                 </div>
                 <div class="rest__card">
-                    <a href="/src/html/rest2.html">
-                        <img class="rest__card__img" src="/src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg""
+                    <a href="src/html/rest2.html">
+                        <img class="rest__card__img" src="src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg""
                             alt="photo plat">
                         <div></div>
                         <div class="rest__card__content">
@@ -94,8 +94,8 @@
                     </a>
                 </div>
                 <div class="rest__card">
-                    <a href="/src/html/rest3.html">
-                        <img class="rest__card__img" src="/src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                    <a href="src/html/rest3.html">
+                        <img class="rest__card__img" src="src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                             alt="photo plat">
                         <div class="rest__card__content">
                             <div class="rest__card__content__text">
@@ -109,9 +109,8 @@
                     </a>
                 </div>
                 <div class="rest__card">
-                    <a href="/src/html/rest4.html">
-                        <img class="rest__card__img"
-                            src="/src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo plat">
+                    <a href="src/html/rest4.html">
+                        <img class="rest__card__img" src="src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo plat">
                         <div class="rest__card__content">
                             <div class="rest__card__content__text">
                                 <h3>Le délice des sens</h3>
