(11.12.2022-19h27) Correction div manquantes

--- a/src/html/rest1.html
+++ b/src/html/rest1.html
@@ -83,67 +83,68 @@
                             <i class="restau__animation__icon fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                <div class="restau__card restau__card__5">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Parmentier de queue de boeuf</h3>
-                        <div class="restau__card__text">À la truffe noire sur sa purée de panais</div>
+                    <div class="restau__card restau__card__5">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Parmentier de queue de boeuf</h3>
+                            <div class="restau__card__text">À la truffe noire sur sa purée de panais</div>
+                        </div>
+                        <div class="restau__card__price">35€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
-                    <div class="restau__card__price">35€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="restau__card restau__card__6">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Filet de turbot</h3>
-                        <div class="restau__card__text">Aux agrumes</div>
-                    </div>
-                    <div class="restau__card__price">44€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-
-        </section>
-        <section class="restau__section">
-            <div class="restau__section__header">
-                <h2 class="restau__section__title">Desserts</h2>
-                <div class="restau__section__underline"></div>
-            </div>
-            <div class="restau--row">
-                <div class="restau__card restau__card__7">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Paris-Brest</h3>
-                        <div class="restau__card__text">Revisité</div>
-                    </div>
-                    <div class="restau__card__price">18€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                    <div class="restau__card restau__card__6">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Filet de turbot</h3>
+                            <div class="restau__card__text">Aux agrumes</div>
+                        </div>
+                        <div class="restau__card__price">44€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
                 </div>
-                <div class="restau__card restau__card__8">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Macaron au chocolat d'exception</h3>
-                        <div class="restau__card__text">Et glace à la vanille de Madagascar</div>
+            </section>
+            <section class="restau__section">
+                <div class="restau__section__header">
+                    <h2 class="restau__section__title">Desserts</h2>
+                    <div class="restau__section__underline"></div>
+                </div>
+                <div class="restau--row">
+                    <div class="restau__card restau__card__7">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Paris-Brest</h3>
+                            <div class="restau__card__text">Revisité</div>
+                        </div>
+                        <div class="restau__card__price">18€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
-                    <div class="restau__card__price">22€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                    <div class="restau__card restau__card__8">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Macaron au chocolat d'exception</h3>
+                            <div class="restau__card__text">Et glace à la vanille de Madagascar</div>
+                        </div>
+                        <div class="restau__card__price">22€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
+                    </div>
+                    <div class="restau__card restau__card__9">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Mousse au chocolat</h3>
+                            <div class="restau__card__text">Au piment d'Espelette et à la truffe noire</div>
+                        </div>
+                        <div class="restau__card__price">23€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
                 </div>
-                <div class="restau__card restau__card__9">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Mousse au chocolat</h3>
-                        <div class="restau__card__text">Au piment d'Espelette et à la truffe noire</div>
-                    </div>
-                    <div class="restau__card__price">23€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
-                    </div>
+                <div class="restau__button"><button class="restau__button__purple button__purple">Commander</button>
                 </div>
-            </div>
-            <div class="restau__button"><button class="restau__button__purple button__purple">Commander</button></div>
-        </section>
+            </section>
         </div>
     </main>
 
