--- a/src/html/rest2.html
+++ b/src/html/rest2.html
@@ -93,66 +93,68 @@
                             <i class="restau__animation__icon fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                <div class="restau__card restau__card__6">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Langoustine poêlée</h3>
-                        <div class="restau__card__text">Purée de patate douce</div>
+                    <div class="restau__card restau__card__6">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Langoustine poêlée</h3>
+                            <div class="restau__card__text">Purée de patate douce</div>
+                        </div>
+                        <div class="restau__card__price">35€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
-                    <div class="restau__card__price">35€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="restau__card restau__card__7">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Mijoté de queue de boeuf</h3>
-                        <div class="restau__card__text">Et riz sauvage aux zestes de citrons</div>
-                    </div>
-                    <div class="restau__card__price">44€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-        </section>
-        <section class="restau__section">
-            <div class="restau__section__header">
-                <h2 class="restau__section__title">Desserts</h2>
-                <div class="restau__section__underline"></div>
-            </div>
-            <div class="restau--row">
-                <div class="restau__card restau__card__8">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Macaron noisette et chocolat</h3>
-                        <div class="restau__card__text">Glace au caramel brun et sel de Guérande</div>
-                    </div>
-                    <div class="restau__card__price">18€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                    <div class="restau__card restau__card__7">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Mijoté de queue de boeuf</h3>
+                            <div class="restau__card__text">Et riz sauvage aux zestes de citrons</div>
+                        </div>
+                        <div class="restau__card__price">44€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
                 </div>
-                <div class="restau__card restau__card__9">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Baba au rhum revisité</h3>
-                        <div class="restau__card__text">Avec son coulis de citron</div>
+            </section>
+            <section class="restau__section">
+                <div class="restau__section__header">
+                    <h2 class="restau__section__title">Desserts</h2>
+                    <div class="restau__section__underline"></div>
+                </div>
+                <div class="restau--row">
+                    <div class="restau__card restau__card__8">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Macaron noisette et chocolat</h3>
+                            <div class="restau__card__text">Glace au caramel brun et sel de Guérande</div>
+                        </div>
+                        <div class="restau__card__price">18€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
-                    <div class="restau__card__price">22€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                    <div class="restau__card restau__card__9">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Baba au rhum revisité</h3>
+                            <div class="restau__card__text">Avec son coulis de citron</div>
+                        </div>
+                        <div class="restau__card__price">22€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
+                    </div>
+                    <div class="restau__card restau__card__10">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Tarte au citron meringuée</h3>
+                            <div class="restau__card__text">Déstructurée</div>
+                        </div>
+                        <div class="restau__card__price">23€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
                 </div>
-                <div class="restau__card restau__card__10">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Tarte au citron meringuée</h3>
-                        <div class="restau__card__text">Déstructurée</div>
-                    </div>
-                    <div class="restau__card__price">23€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
-                    </div>
+                <div class="restau__button"><button class="restau__button__purple button__purple">Commander</button>
                 </div>
-            </div>
-            <div class="restau__button"><button class="restau__button__purple button__purple">Commander</button></div>
-        </section>
+            </section>
         </div>
     </main>
 
