--- a/src/html/rest3.html
+++ b/src/html/rest3.html
@@ -103,7 +103,7 @@
                             <i class="restau__animation__icon fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-
+                </div>
             </section>
             <section class="restau__section">
                 <div class="restau__section__header">
