--- a/src/html/rest4.html
+++ b/src/html/rest4.html
@@ -83,67 +83,68 @@
                             <i class="restau__animation__icon fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                <div class="restau__card restau__card__5">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Langouste rôtie</h3>
-                        <div class="restau__card__text">Et ses légumes de saison</div>
+                    <div class="restau__card restau__card__5">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Langouste rôtie</h3>
+                            <div class="restau__card__text">Et ses légumes de saison</div>
+                        </div>
+                        <div class="restau__card__price">35€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
-                    <div class="restau__card__price">35€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="restau__card restau__card__6">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Côte de boeuf Angus</h3>
-                        <div class="restau__card__text">Et sa purée de panais</div>
-                    </div>
-                    <div class="restau__card__price">44€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-
-        </section>
-        <section class="restau__section">
-            <div class="restau__section__header">
-                <h2 class="restau__section__title">Desserts</h2>
-                <div class="restau__section__underline"></div>
-            </div>
-            <div class="restau--row">
-                <div class="restau__card restau__card__7">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Farandole de desserts</h3>
-                        <div class="restau__card__text">Du chef</div>
-                    </div>
-                    <div class="restau__card__price">18€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                    <div class="restau__card restau__card__6">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Côte de boeuf Angus</h3>
+                            <div class="restau__card__text">Et sa purée de panais</div>
+                        </div>
+                        <div class="restau__card__price">44€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
                 </div>
-                <div class="restau__card restau__card__8">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Crème brulée</h3>
-                        <div class="restau__card__text">Revisitée</div>
+            </section>
+            <section class="restau__section">
+                <div class="restau__section__header">
+                    <h2 class="restau__section__title">Desserts</h2>
+                    <div class="restau__section__underline"></div>
+                </div>
+                <div class="restau--row">
+                    <div class="restau__card restau__card__7">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Farandole de desserts</h3>
+                            <div class="restau__card__text">Du chef</div>
+                        </div>
+                        <div class="restau__card__price">18€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
-                    <div class="restau__card__price">22€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                    <div class="restau__card restau__card__8">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Crème brulée</h3>
+                            <div class="restau__card__text">Revisitée</div>
+                        </div>
+                        <div class="restau__card__price">22€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
+                    </div>
+                    <div class="restau__card restau__card__9">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Millefeuille croustillant</h3>
+                            <div class="restau__card__text">Myrtilles et pâte d’amande</div>
+                        </div>
+                        <div class="restau__card__price">23€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
                 </div>
-                <div class="restau__card restau__card__9">
-                    <div class="restau__card__content">
-                        <h3 class="restau__card__title">Millefeuille croustillant</h3>
-                        <div class="restau__card__text">Myrtilles et pâte d’amande</div>
-                    </div>
-                    <div class="restau__card__price">23€</div>
-                    <div class="restau__animation">
-                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
-                    </div>
+                <div class="restau__button"><button class="restau__button__purple button__purple">Commander</button>
                 </div>
-            </div>
-            <div class="restau__button"><button class="restau__button__purple button__purple">Commander</button></div>
-        </section>
+            </section>
         </div>
     </main>
 
